feat: customizing the initial template

--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,13 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'Greet'
+description: 'Greet a name'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
-    required: true
-    default: '1000'
-outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
+  greetee:  # id of input
+    description: 'name of the one who will be greeted'
+    required: false
+    default: 'World'
+# outputs:
+#   time: # output will be available to future steps
+#     description: 'The current time after waiting'
 runs:
   using: 'node16'
   main: 'dist/index.js'
